[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=4]
[ext_resource path="res://Assets/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.868, 12.1299 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.3925, 4.45684 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.5826, 11.0654 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.353554, 4.94975 )
shape = SubResource( 2 )

[node name="floor_check" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_check"]
position = Vector2( 0, -12.4154 )
shape = SubResource( 3 )

[node name="side_check" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_check"]
position = Vector2( 0, 5.90675 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundSquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ram_check" type="RayCast2D" parent="."]
position = Vector2( -0.315334, 0.315336 )
rotation = -1.5708
cast_to = Vector2( 0, 200 )
collision_mask = 3

[node name="TimerRam" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="top_check" to="." method="_on_top_check_body_entered"]
[connection signal="body_entered" from="side_check" to="." method="_on_side_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerRam" to="." method="_on_TimerRam_timeout"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
